# data-analysis-of-graduation-thesis-project

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.cache/fontconfig/: 00d5189c1d5ced4af9bb23cbaa9b1e94-le64.cache-9  84c0f976e30e948e99073af70f4ae876-le64.cache-9  c391ebd0c376b0cd686d8239f25713f4-le64.cache-9
.cache/matplotlib/: fontlist-v390.json
code_mpx/: AGENTS.md  DJtasktriallist.xlsx  cleanup.m  facelist.mat  proc0_practice_tutorial.m  proc1_explore_task.m  proc2_village_classification_task.m  proc3_distance_judge_task.m  proc4_paired_distance_task.m  proc5_coordinate_test.m  proc6_map_reconstruction.m
data/: AGENTS.md  README.md
data/CTtask_data/: CTtask-1-2025-11-22.mat  CTtask-1-2025-11-22.xlsx  CTtask-1-2026-03-27.csv  CTtask-1-2026-03-27.mat  CTtask-10-2026-03-29.csv  CTtask-10-2026-03-29.mat  (+52 more)
docs/: AGENTS.md  Analysis-plan.md  Data-to-be-exclued.md  README.md  analysis-roadmap.md  architecture.md  data-exclusion.md  development.md  face-ground-truth.md  how to analysis main effect.md  pdtask-main-effect.md
results/: AGENTS.md
scripts/: AGENTS.md  analysis_common.py  cttask_position_analysis.py  djtask_accuracy_analysis.py  eptask_learning_analysis.py  eptask_square_side_audit.py  mrtask_reconstruction_analysis.py  pdtask_d_error_analysis.py  pdtask_varignon_analysis.py  proc1_eptask_learning_analysis.py  proc2_sptask_rt_analysis.py  proc3_djtask_accuracy_analysis.py  proc4_pdtask_analysis.py  proc5_cttask_position_analysis.py  proc6_mrtask_reconstruction_analysis.py  run_all_analysis.py  sptask_rt_analysis.py  verify.sh
(+1100 files in other folders)
